fix(backend): fix acquistaAbbonamento